--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
   "theme_color": "#f0f2f5",
   "start_url": "/m=1",
   "description": "Berbagi Informasi Seputar Lowongan Kerja",
+  "manifest_version": 2,
   "icons": [
     {
       "src": "https://2.bp.blogspot.com/-94VLM1EF97A/Wy6FEh28Z6I/AAAAAAAAAR4/5ssBbqVntUoJJPPh9nBOGU_LitNxBLD0ACLcBGAs/w48-h48-p-k-nu/lsv3-2.png",
