--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Loker Sumatera",
-  "name": "Lowongan Sumatera",
+  "name": "Loker Sumatera",
    "display": "standalone",
   "orientation": "portrait",
   "background_color": "#f0f2f5",
